# toolit

./: CHANGELOG.md  README.md  mypy.ini  pyproject.toml  ruff.toml  todo.md
.github/: copilot-instructions.md
.github/workflows/: continuous_integration.yaml  release.yaml
devtools/: create_new_release.py
scripts/: get_changelog.py  readme.md
src/: cli.py
tests/: cli_command_builder_test.py  cli_integration_test.py  cli_test.py  configuration_loader_test.py  conftest.py  create_tasks_json_test.py  mcp_server_test.py  test_auto_loader.py
toolit/: __init__.py  __main__.py  auto_loader.py  cli.py  cli_command_builder.py  config.py  constants.py  create_apps_and_register.py  create_tasks_json.py  decorators.py  list_serialization.py  mcp_server.py  register_all_tool_and_plugins.py  type_coersion_wrapper.py  type_utils.py
